Fix popup auto dismiss when the gap is hovered
This was previously fixed, but I forgot to add it back when doing #445.

--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -174,6 +174,7 @@ $control-bar-icon-size: 0.7rem;
 [dir] .vjs-menu-button-popup .vjs-menu .vjs-menu-content {
   background-color: rgba(43, 51, 63);
   max-height: 20em;
+  margin-bottom: calc(var(--spacing-xxs) * -1); // Prevents accidental dismissal when the gap is hovered.
 
   li {
     font-size: $control-bar-popup-font-size;
